--- a/views/partials/dossier-nav/navbar.handlebars
+++ b/views/partials/dossier-nav/navbar.handlebars
@@ -2,7 +2,7 @@
 
     <div class="container">
 
-        <a class="navbar-brand" href="../../../views/index.handlebars">Fantasy Mangas</a>
+        <a class="navbar-brand" href="/">Fantasy Mangas</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#monMenu"
             aria-controls="monMenu" aria-label="Menu pour mobile">
@@ -17,9 +17,9 @@
         <div class="collapse navbar-collapse" id="monMenu">
             <div class="navbar-nav ml-auto">
 
-                <a class="nav-item nav-link" href="/">Inscription</a>
-                <a class="nav-item nav-link" href="/">Connexion</a>
-                <a class="nav-item nav-link" href="/">Qui sommes-nous</a>
+                <a class="nav-item nav-link" href="/user/create">Inscription</a>
+                <a class="nav-item nav-link" href="/user/login">Connexion</a>
+                <a class="nav-item nav-link" href="/contact">Contactez-nous</a>
                 <a class="nav-item nav-link" href="#nospates">Nos Mangas</a>
                 <a class="nav-item nav-link" href="#photos">Photos</a>
 
