--- a/views/partials/footer.handlebars
+++ b/views/partials/footer.handlebars
@@ -1,9 +1,9 @@
 <footer>
     <div class="copyright">
-        <p> Site de Mangas - 2019. <a href="/"> Mentions légales </a></p>
+        <p> Site de Mangas - 2019. <a href="/"> Mentions légales
+                <br>
+                <span><i class="fab fa-facebook-square"></i></span>
+                <span><i class="fab fa-google-plus-square"></i></span>
+                <span><i class="fab fa-twitter-square"></i></span></a></p>
     </div>
 </footer>
-
-</body>
-
-</html>
