--- a/views/partials/indexpage/mangas.handlebars
+++ b/views/partials/indexpage/mangas.handlebars
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h2> Nos Mangas </h2>
+                <h2> La Unes </h2>
             </div>
         </div>
 
