--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -1,107 +1,113 @@
 <section>
 
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="form">
-                            <h2>Contactez-nous</h2>
-                            <p>C'est dans un cadre surprenant, au plus près du bassin, que vous accueille toute
-                                l'équipe du Restaurant Le Santa Maria sur le Port d'Arcachon. Depuis sa terrasse, le
-                                point de vue laisse rêveur, alors qu'à l'intérieur la convivialité est de mise..</p>
+    <div class="p3">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="form">
+                        <h2>Contactez-nous</h2>
+                        <p>Placez en pleins centre de Angers et pratique d'accès Fantasy Mangas vous ouvres ces portes
+                            du Lundi au vendredi de 9h-12h30 et 13h30 à 18h30. Pour réservation d'un mangas n'hésitez
+                            pas à appeler a notre numero ci dessous. </p>
 
-                        </div>
                     </div>
                 </div>
-
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="phone">
-                            <i class="fas fa-phone"></i> 06.52.09.28.24
-                        </div>
-                    </div>
-                    <div class="col-md-8">
-                        <div class="adress">
-                            <i class="fas fa-map-marker-alt"></i> Centre Nautique Pierre Mallet - Port de Plaisance,
-                            33120 Arcachon
-
-                            <br>
-                            <br>
-                            <br>
-
-                        </div>
-                    </div>
-                </div>
-
-                <form>
-                    <!-- Nom et Email -->
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="contact-form">
-                                <label>Nom:</label>
-                                <input type="text" id="name" />
-                            </div>
-                        </div>
-
-                        <div class="col-md-6">
-                            <div class="contact-form">
-                                <label>Email:</label>
-                                <input type="email" id="email" placeholder="Ajouter votre email" />
-                                <small>Vous ne recevrez pas de publicité.</small>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Service contact -->
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="contact-form">
-                                <label> sélectionnez le service</label>
-                                <select>
-                                    <option>Service client</option>
-                                    <option> Service comptable</option>
-                                    <option> SAV</option>
-                                </select>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Message -->
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="contact-form">
-                                <label>Votre message:</label>
-                                <textarea id="message" rows="3" class="contact-message"></textarea>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Bouton envoyer -->
-                    <div class="row">
-                        <div class="col-md-12">
-                            <div class="contact-form">
-                                <button class="btn btn-contact">Envoyer</button>
-                            </div>
-                        </div>
-                    </div>
-                    <br>
-                    <br>
-
-                </form>
             </div>
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <div class="phone">
+                                        <i class="fas fa-phone"></i> 06.04.08.74.05
+                                    </div>
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="adress">
+                                        <i class="fas fa-map-marker-alt"></i> 2 rue de l'aiguillerie,
+                                        49000 Angers
 
+                                        <br>
+                                        <br>
+                                        <br>
 
-            <div class="col-md-6">
-                <div class="map">
-                    <iframe
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11353.252529651907!2d-1.1721205069755483!3d44.651953688647495!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd549eded436abab%3A0x22f30fe45a3ac536!2sRestaurant+Le+Santa+Maria!5e0!3m2!1sfr!2sfr!4v1552232610403"
-                        width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                                    </div>
+                                </div>
+                            </div>
+                            <form>
+                                <!-- Nom et Email -->
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="contact-form">
+                                            <label>Nom:</label>
+                                            <input type="text" id="name" />
+                                        </div>
+                                    </div>
 
+                                    <div class="col-md-6">
+                                        <div class="contact-form">
+                                            <label>Email:</label>
+                                            <input type="email" id="email" placeholder="Ajouter votre email" />
+                                            <small>Vous ne recevrez pas de publicité.</small>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- Service contact -->
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="contact-form">
+                                            <label> sélectionnez le service</label>
+                                            <select>
+                                                <option>Service client</option>
+                                                <option> Service comptable</option>
+                                                <option> SAV</option>
+                                            </select>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- Message -->
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="contact-form">
+                                            <label>Votre message:</label>
+                                            <textarea id="message" rows="3" class="contact-message"></textarea>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- Bouton envoyer -->
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="contact-form">
+                                            <button class="btn btn-contact">Envoyer</button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <br>
+                                <br>
+
+                            </form>
+                        </div>
+
+                        <div class="col-md-6">
+                            <div class="map">
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2696.978525945907!2d-0.5558766839933073!3d47.47084790533855!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x480878c1c10a1b37%3A0xbd2dae5282ef030d!2s2+Rue+de+l&#39;Aiguillerie%2C+49100+Angers!5e0!3m2!1sfr!2sfr!4v1558096304000!5m2!1sfr!2sfr"
+                                    width="400" height="300" frameborder="0" style="border:0" allowfullscreen>
+                                </iframe>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
+
     </div>
 
-
 </section>
+
+
+</div>
