--- a/views/partials/register.handlebars
+++ b/views/partials/register.handlebars
@@ -1,4 +1,105 @@
-<section class="section">
+<section class="register">
+    <div class="container">
+        <p class="p0"> Inscris Toi</p>
+        <div class="row justify-content-center">
+
+            <div class="col-md-12">
+
+                <div class="card">
+
+                    <article class="card-body">
+                        <form>
+                            <div class="form-row">
+                                <div class="col form-group">
+                                    <label>Nom </label>
+                                    <input type="text" class="form-control" placeholder="">
+                                </div> <!-- form-group end.// -->
+                                <div class="col form-group">
+                                    <label>Prénom</label>
+                                    <input type="text" class="form-control" placeholder=" ">
+                                </div> <!-- form-group end.// -->
+                            </div> <!-- form-row end.// -->
+                            <div class="form-group">
+                                <label>Email</label>
+                                <input type="email" class="form-control" placeholder="">
+                                <small class="form-text text-muted">Nous ne partagerons jamais vos informations avec qui
+                                    que
+                                    ce soit.</small>
+                            </div> <!-- form-group end.// -->
+                            <div class="form-group">
+                                <label class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="gender" value="option1">
+                                    <span class="form-check-label"> Homme </span>
+                                </label>
+                                <label class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="gender" value="option2">
+                                    <span class="form-check-label"> Femme </span>
+                                </label>
+                            </div> <!-- form-group end.// -->
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label>Ville</label>
+                                    <input type="text" class="form-control">
+                                </div> <!-- form-group end.// -->
+                                <div class="form-group col-md-6">
+                                    <label>Pays</label>
+                                    <select id="inputState" class="form-control">
+                                        <option> Choose...</option>
+                                        <option>France/option>
+                                        <option>Russie</option>
+                                        <option selected="">Américain</option>
+                                        <option>espagnol</option>
+                                        <option>Allemand</option>
+                                    </select>
+                                </div> <!-- form-group end.// -->
+                            </div> <!-- form-row.// -->
+                            <div class="form-group">
+                                <label>Mot de passe</label>
+                                <input class="form-control" type="password">
+                            </div> <!-- form-group end.// -->
+                            <div class="form-group">
+                                <button type="submit" class="btn btn-primary btn-block"> Inscription </button>
+                            </div> <!-- form-group// -->
+                            <small class="text-muted">En cliquant sur le bouton "Inscription", vous confirmez que vous
+                                acceptez nos
+                                Conditions d'utilisation et politique de confidentialité.
+                        </form>
+                    </article> <!-- card-body end .// -->
+                    <div class="border-top card-body text-center">Tu as déja un compte? <a href="/user/login">Se
+                            connecter</a>
+                    </div>
+                </div> <!-- card.// -->
+            </div> <!-- col.//-->
+
+        </div> <!-- row.//-->
+
+    </div>
+
+</section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+{{!-- <section class="section">
     <div class="container is-fullhd">
 
 
@@ -62,4 +163,4 @@
             </div>
     </div>
 
-    </form>
+    </form> --}}
