--- a/views/partials/dossier-nav/navbar.handlebars
+++ b/views/partials/dossier-nav/navbar.handlebars
@@ -21,6 +21,7 @@
                 <a class="nav-item nav-link" href="/user/login">Connexion</a>
                 <a class="nav-item nav-link" href="/contact">Contactez-nous</a>
                 <a class="nav-item nav-link" href="/articles">Nos Mangas</a>
+                <a class="nav-item nav-link" href ="/ajout/add">Editer un article</a>
                 <a class="nav-item nav-link" href="/#photos">Photos</a>
 
 
