--- a/views/ajout/add.handlebars
+++ b/views/ajout/add.handlebars
@@ -34,10 +34,11 @@
       <div class="field is-grouped">
         <div class="control">
           <button class="btn btn-full">Submit</button>
+          <button class="btn btn-full" href="/#sliderAccueil">Cancel</button>
         </div>
-        <div class="control">
-          <button class="btn btn-full">Cancel</button>
         </div>
     </form>
   </div>
 </section>
+
+{{>footer}}
