--- a/views/partials/head.handlebars
+++ b/views/partials/head.handlebars
@@ -33,6 +33,6 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
+    <script src="//cdn.ckeditor.com/4.11.4/standard/ckeditor.js"></script>  
 
 </head>
